# simple_translator_argos

./: Cargo.toml  LICENSE  README.md  pyproject.toml
src/: main.rs
src/simple_translator/: __main__.py
src/translation/: __main__.py  iohandler.py  translator.py
